Fix account page field collection spacings and remove bottom border.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -203,6 +203,11 @@ table.views-table {
   margin: 0;
 }
 
+.pane-content .field-collection-container {
+  border-bottom: 0;
+  margin-bottom: 0;
+}
+
 label,
 .pane-title,
 .ckeditor_links,
